# DetroitCrimeForecaster

./: .gitignore  README.md  databricks.yml  helpers.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
.streamlit/: secrets-example.toml
app/: app.yaml  helpers.py  main.py
app/.streamlit/: secrets-example.toml  secrets.toml
data/City_Council_Districts/: 2c2cf486-14ca-4151-92e6-e9334cbd32532020329-1-q5aagv.jrg1j.dbf  2c2cf486-14ca-4151-92e6-e9334cbd32532020329-1-q5aagv.jrg1j.shp  2c2cf486-14ca-4151-92e6-e9334cbd32532020329-1-q5aagv.jrg1j.shx
pipeline/: Pull data.ipynb  run_databricks_job.py  run_databricks_job.sh
pipeline/explorations/: data_prep.ipynb  machine_learning.py  sql_fiddle.sql.dbquery.ipynb  transformations_gold_broken_reprex.py
pipeline/transformations/: basic_forecasts.sql  transformations_gold.sql  transformations_silver.py
resources/: data.app.yml  engineering_pipeline.yml  job_definition.yml  schema.yml
