[project]
name = "detroitcrimeforecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.74.0",
    "databricks-sql-connector[pyarrow]>=2.9.6",
    "geopandas>=1.1.1",
    "isort>=7.0.0",
    "logzero>=1.7.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.14.9",
    "streamlit>=1.52.1",
]
